# MCP-Security-Gateway

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  otel-collector-config.yaml  progress_report.md  pyproject.toml  tasks.md
.github/workflows/: ci.yml
docker/: otel-collector-config.yaml
docs/architecture/: agent-interaction.md
docs/policies/: policy-schema.md
evals/: __init__.py  mutate_policy.py  program.md  reporting.py  scoring.py
evals/datasets/: README.md  dev.yaml  held_out.yaml  train.yaml
gateway/: config.py  main.py
gateway/agents/: __init__.py  argument_guard.py  base.py  red_team.py  risk_classifier.py
gateway/api/: __init__.py  deps.py
gateway/api/v1/: admin.py  approvals.py  audit.py  gateway.py
gateway/approval/: manager.py  notifier.py
gateway/audit/: logger.py  query.py
gateway/auth/: admin_sessions.py  api_keys.py
gateway/cache/: redis_client.py
gateway/db/: models.py  session.py
gateway/db/migrations/: env.py
gateway/db/migrations/versions/: 0001_initial.py  0002_org_output_admin_sessions.py
gateway/enforcement/: __init__.py  errors.py  executor.py  pipeline.py
gateway/models/: __init__.py  admin.py  approval.py  audit.py  identity.py  mcp.py  policy.py  risk.py
gateway/observability/: otel.py
gateway/policy/: __init__.py  constraints.py  engine.py  loader.py  output_engine.py  schema_validator.py
policies/: default.yaml  dev.yaml
scripts/: run_benchmark.py  run_eval_loop.py  seed_policies.py
tests/: conftest.py
tests/evals/: test_eval_datasets.py  test_mutate_policy.py  test_scoring.py
tests/evals/fixtures/: output_regressions.yaml  policy_regressions.yaml
tests/integration/: conftest.py  test_approval_manager.py  test_audit_logger.py  test_pipeline_integration.py
tests/scenarios/: conftest.py
tests/scenarios/attack/: test_attack_scenarios.py
tests/scenarios/safe/: test_safe_scenarios.py
tests/unit/: test_admin_sessions.py  test_approval_manager.py  test_argument_guard.py  test_audit_logger.py  test_base_agent.py  test_constraints.py  test_executor.py  test_otel.py  test_output_engine.py  test_pipeline.py  test_policy_engine.py  test_red_team.py  test_redis_client.py  test_risk_classifier.py
ui/: Dockerfile  index.html  nginx.conf  package.json
ui/src/: App.tsx
ui/src/api/: approvals.ts  audit.ts  auth.ts  client.ts
ui/src/components/: ApprovalCard.tsx  AuditTable.tsx  DecisionBadge.tsx
ui/src/pages/: ApprovalsPage.tsx  AuditPage.tsx  LoginPage.tsx
