[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-security-gateway"
version = "0.1.0"
description = "Policy-aware multi-agent security gateway for MCP tool calls"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # LLM (direct SDK - no LangChain)
    "anthropic>=0.39.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Policy / config
    "pyyaml>=6.0.2",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    # HTTP client (for MCP server forwarding)
    "httpx>=0.28.0",
    # Observability
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    # Utilities
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",       # for FastAPI TestClient
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
]

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests requiring postgres + redis (docker stack)",
    "scenario: full security benchmark scenarios",
    "attack: adversarial test cases (expected DENY)",
    "safe: expected-allow test cases",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["gateway"]
omit = [
    "gateway/db/migrations/*",
    "gateway/telemetry/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "S101",  # assert statements (used in tests + red team guard)
    "B008",  # do not perform function calls in default arguments (FastAPI Depends)
    "N818",  # exception name should be named with Error suffix
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N"]  # relax security + naming rules in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # assert_used - we use asserts intentionally in red team guard

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
]
